API: feat add profile preferences API
